# HPC-Benchmark

./: .gitmodules  CMakeLists.txt
include/hpc/: AlignedAlloc.hpp  HPCHighDimensionFlatArray.hpp
include/sparse/: Grid.hpp  Matrix.hpp  SparseDataStructure.h
src/: benchmark.cpp
